implementing POST view

--- a/SourceCode/iOS/ZpotDrop/ZpotDrop/Base.lproj/Localizable.strings
+++ b/SourceCode/iOS/ZpotDrop/ZpotDrop/Base.lproj/Localizable.strings
@@ -38,6 +38,8 @@
 "post" = "Post";
 "password" = "Password";
 "place_holder_username" = "Email or phone number";
+"place_holder_zpot_drop_post" = "Zpot's title";
+"place_holder_search_location" = "Find or create your current location";
 //MARK: - ***** S *****
 "search" = "Search";
 "settings" = "Settings";
