implementing Feed View

--- a/SourceCode/iOS/ZpotDrop/ZpotDrop/Base.lproj/Localizable.strings
+++ b/SourceCode/iOS/ZpotDrop/ZpotDrop/Base.lproj/Localizable.strings
@@ -49,3 +49,4 @@
 "welcome" = "Welcome to";
 //MARK: - ***** Z *****
 "zpot_all" = "Zpot All";
+"zpot_all_usage" = "Now,click to zpot all your friends";
