--- a/SourceCode/iOS/ZpotDrop/ZpotDrop/Base.lproj/Localizable.strings
+++ b/SourceCode/iOS/ZpotDrop/ZpotDrop/Base.lproj/Localizable.strings
@@ -13,6 +13,10 @@
 "cancel" = "Cancel";
 "confirm_password" = "Confirm again";
 "comming" = "C'Min";
+"change_password" = "Change password";
+//MARK: - ***** D *****
+"drops" = "Drops";
+"dob" = "Date of birth";
 //MARK: - ***** E *****
 "error_title" = "We're sorry";
 "error_email_format" = "Your email is not correct format";
@@ -21,16 +25,24 @@
 "error_first_name" = "First name is missing, please check again";
 "error_last_name" = "Last name is missing, please check again";
 "error_no_gps" = "GPS isn't available for using.Please turn it on.";
+"email" = "Email";
+"enable_all_zpot" = "Enable all zpot";
+"enable_all_zpot_usage" = "Allow you to zpot all your friends(follower + following) using the All zpot, but also makes you visible to them when they use the All zpot";
 //MARK: - ***** F *****
 "feed" = "Feed";
 "find" = "Find";
 "forget_password" = "Forgot password?";
 "first_name" = "First name";
 "female" = "Female";
+"followers" = "Followers";
+"following" = "Following";
+//MARK: - ***** H *****
+"hometown" = "Hometown";
 //MARK: - ***** I *****
 "is_comming" = "is comming";
 //MARK: - ***** L *****
 "last_name" = "Last name";
+"logout" = "Log out";
 //MARK: - ***** M *****
 "male" = "Male";
 //MARK: - ***** N *****
@@ -47,10 +59,18 @@
 "place_holder_feed_comment" = "Enter your comment...";
 "place_holder_search_zpot" = "Search for friends to request zpot";
 "profile" = "Profile";
+"phone" = "Phone";
+"place_holder_birthday" = "day/month/year";
+"private_profile" = "Private profile";
+"privacy_policy" = "Privacy Policy";
+//MARK: - ***** R *****
+"request_zpot" = "Request zpot";
 //MARK: - ***** S *****
 "search" = "Search";
 "settings" = "Settings";
 "send" = "Send";
+//MARK: - ***** T *****
+"terms_of_use" = "Temp of Use";
 //MARK: - ***** W *****
 "welcome" = "Welcome to";
 //MARK: - ***** Z *****
