--- a/SourceCode/iOS/ZpotDrop/ZpotDrop/Base.lproj/Localizable.strings
+++ b/SourceCode/iOS/ZpotDrop/ZpotDrop/Base.lproj/Localizable.strings
@@ -84,6 +84,7 @@
 "send" = "Send";
 "search_for_people" = "Search for people";
 "save" = "Save";
+"scan" = "Scan";
 //MARK: - ***** T *****
 "terms_of_use" = "Temp of Use";
 //MARK: - ***** W *****
