change layout of POST view,not implement new comment view

--- a/SourceCode/iOS/ZpotDrop/ZpotDrop/Base.lproj/Localizable.strings
+++ b/SourceCode/iOS/ZpotDrop/ZpotDrop/Base.lproj/Localizable.strings
@@ -16,8 +16,11 @@
 "cancel" = "Cancel";
 "confirm_password" = "Confirm again";
 "comming" = "C'Min";
+"comminged" = "UnC'Min";
 "change_password" = "Change password";
 "create_location" = "Create location";
+"comment" = "Comment";
+"comments" = "Comments";
 //MARK: - ***** D *****
 "drops" = "Drops";
 "dob" = "Date of birth";
@@ -65,7 +68,9 @@
 "location_name" = "Location name";
 "location_address" = "Location address";
 "like_this" = "like this";
-
+"like" = "Like";
+"liked" = "Liked";
+"likes" = "Likes";
 //MARK: - ***** M *****
 "male" = "Male";
 "minute" = "min";
