Login with facebook, Forget password, Notfication API

--- a/SourceCode/iOS/ZpotDrop/ZpotDrop/Base.lproj/Localizable.strings
+++ b/SourceCode/iOS/ZpotDrop/ZpotDrop/Base.lproj/Localizable.strings
@@ -50,6 +50,7 @@
 "feed" = "Feed";
 "find" = "Find";
 "forget_password" = "Forgot password?";
+"forget_pass" = "Forgot password";
 "first_name" = "First name";
 "female" = "Female";
 "followers" = "Followers";
@@ -76,6 +77,7 @@
 "like" = "Like";
 "liked" = "Liked";
 "likes" = "Likes";
+"login_facebook" = "Log in with Facebook";
 //MARK: - ***** M *****
 "male" = "Male";
 "minute" = "min";
@@ -94,6 +96,7 @@
 //MARK: - ***** O *****
 "ok" = "OK";
 "other" = "Other";
+"or" = "Or";
 //MARK: - ***** P *****
 "post" = "Post";
 "password" = "Password";
@@ -107,6 +110,8 @@
 "place_holder_birthday" = "day/month/year";
 "private_profile" = "Private profile";
 "privacy_policy" = "Privacy Policy";
+"phone_number" = "Phone Number";
+"permission_missing" = "App can't login if all permissions are not granted";
 //MARK: - ***** R *****
 "request_zpot" = "Request zpot";
 "retry" = "Retry";
@@ -118,6 +123,7 @@
 "save" = "Save";
 "scan" = "Scan";
 "seconds" = "sec";
+"sign_up" = "Sign up";
 //MARK: - ***** T *****
 "terms_of_use" = "Temp of Use";
 //MARK: - ***** V *****
