update Search Facebook,Contact

--- a/SourceCode/iOS/ZpotDrop/ZpotDrop/Base.lproj/Localizable.strings
+++ b/SourceCode/iOS/ZpotDrop/ZpotDrop/Base.lproj/Localizable.strings
@@ -63,6 +63,7 @@
 "friend" = "Friend";
 "find_fb_friend" = "Find Facebook friends";
 "find_from_contacts" = "Find people from contacts";
+"find_facebook_friend_title" = "Log in with Facebook to find Facebook friends";
 //MARK: - ***** J *****
 "just_now" = "Just now";
 //MARK: - ***** H *****
