--- a/SourceCode/Android/Zpotdrop/app/src/main/res/values/strings.xml
+++ b/SourceCode/Android/Zpotdrop/app/src/main/res/values/strings.xml
@@ -1,4 +1,18 @@
+<!--
+  ~ Copyright (c) 2015 Zpotdrop. All rights reserved.
+  -->
+
 <resources>
     <string name="app_name">Zpotdrop</string>
     <string name="action_settings">Settings</string>
+
+    <!--LOGIN-->
+    <string name="welcome_to">Welcome to</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="continue_text">Continue</string>
+    <string name="or">OR</string>
+    <string name="login_with_facebook">Login with Facebook</string>
+    <string name="not_yet_on_zpotdrop">Not yet on zpotdrop?</string>
+    <string name="forgot_password">Forgot password?</string>
 </resources>
