--- a/SourceCode/Android/Zpotdrop/app/src/main/res/values/strings.xml
+++ b/SourceCode/Android/Zpotdrop/app/src/main/res/values/strings.xml
@@ -58,4 +58,27 @@
     <string name="followings_capital">FOLLOWINGS</string>
     <string name="msg_private_user">This user is private</string>
 
+    <!--FIND-->
+    <string name="hint_search">Search for friends to request zpot</string>
+    <string name="here">Here</string>
+    <string name="there">There</string>
+    <string name="scan">Scan</string>
+
+    <!--SETTINGS-->
+    <string name="first_name_settings">First name:</string>
+    <string name="last_name_settings">Last name:</string>
+    <string name="hometown">Hometown:</string>
+    <string name="date_of_birth_settings">Date of birth:</string>
+    <string name="email_settings">Email:</string>
+    <string name="phone_settings">Phone:</string>
+    <string name="edit_picture">Edit picture</string>
+    <string name="change_password">Change password</string>
+    <string name="profile_color">Profile color</string>
+    <string name="private_profile">Private profile</string>
+    <string name="msg_private_profile">With a private profile, only people you approve can see your drops on Zpotdop.</string>
+    <string name="enable_all_zpot">Enable All zpot</string>
+    <string name="msg_enable_all_zpot">Allows you to zpot all your friends (follower + following) using the All zpot, but also makes you visible to them when they use the All zpot.</string>
+    <string name="terms_of_use">Terms of Use</string>
+    <string name="privacy_policy">Privacy Policy</string>
+
 </resources>
