--- a/SourceCode/iOS/ZpotDrop/ZpotDrop/Base.lproj/Localizable.strings
+++ b/SourceCode/iOS/ZpotDrop/ZpotDrop/Base.lproj/Localizable.strings
@@ -36,6 +36,7 @@
 "error_passwords_not_match" = "Your password and confirm password doesn't match";
 "error_first_name" = "First name is missing, please check again";
 "error_last_name" = "Last name is missing, please check again";
+"error_dob" = "Date of birth is missing, please check again";
 "error_no_gps" = "GPS isn't available for using.Please turn it on.";
 "email" = "Email";
 "enable_all_zpot" = "Enable all zpot";
