Update left menu

--- a/SourceCode/iOS/ZpotDrop/ZpotDrop/Base.lproj/Localizable.strings
+++ b/SourceCode/iOS/ZpotDrop/ZpotDrop/Base.lproj/Localizable.strings
@@ -124,7 +124,7 @@
 "retry" = "Retry";
 //MARK: - ***** S *****
 "search" = "Search";
-"settings" = "SETTING";
+"settings" = "SETTINGS";
 "send" = "Send";
 "search_for_people" = "Search for people";
 "save" = "Save";
